# brokoli-sdk

./: .gitignore  README.md  pyproject.toml
brokoli/: __init__.py  cli.py  decorators.py  exceptions.py  nodes.py  parsing.py  pipeline.py  result.py  validate.py
examples/: 01_hello_world.py  02_api_to_database.py  03_join_and_quality.py  04_dbt_with_alerts.py  05_sensor_custom_pipeline.py
tests/: test_codegen.py  test_decorators.py  test_pipeline.py  test_transform_rename.py  test_validate.py
